discussion/kv_engine/137161/137161_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: set_collections persist current manifest

set_collections only allows 'forward' progress after checking
that the new manifest is a successor of the current manifest,
however after warm-up we have to accept whatever we are given.

This commit updates set_collections so that for persistent buckets
the new manifest is first stored in the database directory and
then we update from that manifest on-success, now warm-up brings
the manifest back from storage and we can validate that further
updates are a valid successor.

Ephemeral buckets just update with no background task.

This patch stores using Manifest::toJSON and reloads JSON using
Manifest's existing construction with no integrity checking.

Change-Id: Ie548e31f56c4847ecf4c0c4ad866544f6bcd2a5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-09-30 11:39:03.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-30 12:15:50.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4779/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4779/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4779/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30738/ : FAILURE

Failure of GoogleTest "CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only":

<pre>
[ RUN      ] CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file ep_engine_ep_unit_tests.db/test.235901\magma.1\wal\wal.1 under ep_engine_ep_unit_tests.db/test.235901 failed: The data is invalid." thrown in the test body.
[  FAILED  ] CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only, where GetParam() = ("persistentMagma", "value_only") (36 ms)
CollectionsPersistent/CollectionsManifestUpdatePersistent.update_fail_persist/persistentMagma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30738/ )

Failure of a CTest test 140/394 Test #145: ep-engine_ep_unit_tests.CollectionsPersistent/CollectionsManifestUpdatePersistent ............................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30738/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5144/ : FAILURE

Failure of GoogleTest "AllBucketTypes/ActiveDurabilityMonitorTest.MB_41235_commit/persistent_value_only":

<pre>
[ RUN      ] AllBucketTypes/ActiveDurabilityMonitorTest.MB_41235_commit/persistent_value_only
[2020-09-30T11:49:18.958Z] ../kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:3767: Failure
[2020-09-30T11:49:18.958Z] Expected equality of these values:
[2020-09-30T11:49:18.958Z]   cb::engine_errc::success
[2020-09-30T11:49:18.958Z]     Which is: success
[2020-09-30T11:49:18.958Z]   engine->set_collection_manifest(cookie, std::string{cm})
[2020-09-30T11:49:18.958Z]     Which is: would block
[2020-09-30T11:49:18.958Z] ../kv_engine/engines/ep/tests/module_tests/durability_monitor_test.cc:3794: Failure
[2020-09-30T11:49:18.958Z] Expected: adm.processCompletedSyncWriteQueue() doesn"t throw an exception.
[2020-09-30T11:49:18.958Z]   Actual: it throws.
[2020-09-30T11:49:18.958Z] [  FAILED  ] AllBucketTypes/ActiveDurabilityMonitorTest.MB_41235_commit/persistent_value_only, where GetParam() = ("persistent", "value_only") (3 ms)
AllBucketTypes/ActiveDurabilityMonitorTest.MB_41235_commit/persistent_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5144/ )

Failure of a CTest test [2020-09-30T11:49:18.949Z]  58/408 Test #170: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest .......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5144/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6068/ : FAILURE

Failure of a CTest test [2020-09-30T12:05:40.159Z]  87/398 Test #171: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest .......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6068/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6190/ : FAILURE

Failure of a CTest test [2020-09-30T11:47:26.816Z]  19/411 Test #173: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest .......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6295/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0008/0099]: test dcp consumer flow control aggressive...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1919 Test failed: `" (Expected `20000000", got `15000000" - Flow Control Buffer Size not correct)
[2020-09-30T12:04:17.957Z] (1130 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6295/ )

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/build/kv_engine/ep_testsuite_dcp+0x4eab9b) in AnnotateRWLockAcquired  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6295/ )

Failure of a CTest test [2020-09-30T12:02:45.736Z]   1/389 Test #246: ep_testsuite_dcp.ephemeral.comp_passive ..................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13961/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26576/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
